Allow unistall dialog to be re-used.

In previous refactoring uninstall dialog was made one-time use. Some
code reuses uninstall dialog. This CL supports this case

BUG=737072
TEST=Manually on device on "chrome://apps" page and could remove
     multiple apps.

Change-Id: I69c952de4fc420edbcd84a5d806c32efc672fa18